# qrcode-mcp-server

./: README.md  pyproject.toml  requirements.txt  server.py  test_mcp.py
