[project]
name = "qr-code-generator-mcp"
version = "1.0.0"
description = "MCP server for generating QR codes from URLs"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mcp", "qr-code", "qrcode", "model-context-protocol", "ai"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.4.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/qr-code-generator-mcp"
Repository = "https://github.com/yourusername/qr-code-generator-mcp"
Issues = "https://github.com/yourusername/qr-code-generator-mcp/issues"

[project.scripts]
qr-code-generator = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
