[project]
name = "qrcode-mcp-server"
version = "1.0.0"
description = "MCP server for generating QR codes from URLs using FastMCP"

dependencies = [
    "fastmcp>=0.1.0",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.4.0"
]

[project.scripts]
qrcode-mcp-server = "server:main"

[tool.setuptools]
py-modules = ["server"]
